[package]
name = "draytek_imgtool"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
chacha20 = { path = "chacha20" }
clap = { version = "4.5", features = ["derive"] }
crc = "3.2"
hex = "0.4"
hexdump = "0.1"
itertools = "0.13"
md5 = "0.7"
parse_int = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
